﻿v.1.5.8

LibSUnit (Safe's Unit Lib) 
* Fixed: Error 1120, which could possibly cause raid tracking issues.
* Optimized: Reworked raid tracking code to be more streamlined.

Menu
* Changed: Reworked menu code to be better separated from the main code.
* New: Started work on new Drop Down menu items.

LibSGui (Safe's GUI Lib)
* New: Added new Drop Down graphics and initial code base.

Raids
* Planebreaker Bastion
** New: Encounter support for Inyr'Kta (By Noshei)
** New: Encounter support for Abominus (By Noshei)

Experts
* Archive of Flesh
** Emphareal
*** Added: Alert for Flood the Halls (Warning)
*** Added: Alert for Flood the Halls (Duration)

Dungeons
* Archive of Flesh
** Emphareal
*** Added: Alert for Flood the Halls (Warning)
*** Added: Alert for Flood the Halls (Duration)
** Ahzrius
*** Added: Alert for Drastic Renovations.

----
v1.5.7

Raids
* Planebreaker Bastion
** Thrax
*** Fixed: File Encoding to UTF-8

Slivers
* Intrepid Drowned Halls
** Isskal
*** Change: Changed dance notification to simple say "Change"

Translations
* German Updates

----
v1.5.6

Defaults
* New: Added the follow to /kbmdefault
** PlayerCastbar : Resets the position of the Player Castbar.
** TargetCastbar : Resets the position of the Target Castbar.
** FocusCastbar  : Resets the position of the Focus Castbar.
** BossCastbar	 : Resets the position of the global Boss Castbars.
** Castbars		 : Resets all of the above.

Development
* Timers
** Change: :SetLink(TimerObj) method will now Attach to a Master Timer. This allows for multiple Timers to link to a single Timer.
** Fixed: Master Timers now apply their settings to all slave timers when they are changed in the menu. This includes enabled and color settings.

System
* Fixed: Removed KBM table from Global Namespace.
* Fixed: Removed KBM_Debug function from Global Namespace.
* Fixed: Removed TriggerObj from Global Namespace.
* Fixed: Removed AlertObj from Global Namespace.
* Fixed: Removed _lsu from Global Namespace (LibSUnit)